Downgrade jquery, sketch xml standings, RPF for RUS

--- a/app/views/events/competitors/_competitor_cells.html.haml
+++ b/app/views/events/competitors/_competitor_cells.html.haml
@@ -11,5 +11,10 @@
     = competitor.suit_name
 
 %td.text-center
-  %span{'data-toggle' => 'tooltip', title: competitor.country_name}
-    = competitor.country_code
+  - russia_restricted = @event.is_official && [2020, 2021].include?(@event.starts_at.year)
+  - if russia_restricted && competitor.country_code == 'RUS'
+    %span{'data-toggle' => 'tooltip', title: 'Neutral Athletes'}
+      = 'RPF'
+  - else
+    %span{'data-toggle' => 'tooltip', title: competitor.country_name}
+      = competitor.country_code
