Export scoreboard in ISC format

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,6 +36,7 @@
 @import './profiles/**/*';
 @import './tournaments/**/*';
 @import './online_competitions/**/*';
+@import './inside_iframe';
 
 html, body {
   height: 100%;
