Correct spelling, change exit altitude warnings

--- a/app/views/competition_series/show.html.erb
+++ b/app/views/competition_series/show.html.erb
@@ -13,7 +13,7 @@
     <% if @competition_series.surprise? %>
       <div class="row">
         <h1 class="text-muted text-center">
-          🙅 Let it be Surprise
+          🙅 Let it be a Surprise
         </h1>
       </div>
     <% else %>
