--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -86,7 +86,7 @@
       = render @scoreboard, can_manage: can_manage
     - else
       %h1.text-muted.text-center
-        🙅 Let it be Surprise
+        🙅 Let it be a Surprise
 
     - if @scoreboard.wind_cancellation
       .row
