--- a/app/views/tournaments/show.html+mobile.haml
+++ b/app/views/tournaments/show.html+mobile.haml
@@ -6,7 +6,7 @@
 
   - if @tournament.surprise?
     %h1.text-muted.text-center
-      🙅 Let it be Surprise
+      🙅 Let it be a Surprise
   - else
     .content-block
       .scoreboard
