--- a/app/views/competition_series/show.html+mobile.erb
+++ b/app/views/competition_series/show.html+mobile.erb
@@ -7,7 +7,7 @@
 
   <% if @competition_series.surprise? %>
     <h1 class="text-muted text-center">
-      🙅 Let it be Surprise
+      🙅 Let it be a Surprise
     </h1>
   <% else %>
     <%= render @scoreboard %>
