--- a/app/views/events/teams/show.html.erb
+++ b/app/views/events/teams/show.html.erb
@@ -17,7 +17,7 @@
       ></div>
     <% else %>
       <h1 class="text-muted text-center">
-        🙅 Let it be Surprise
+        🙅 Let it be a Surprise
       </h1>
     <% end %>
 
