--- a/app/views/tournaments/show.html.haml
+++ b/app/views/tournaments/show.html.haml
@@ -12,7 +12,7 @@
 
       - if @tournament.surprise? && !editable
         %h1.text-muted.text-center
-          🙅 Let it be Surprise
+          🙅 Let it be a Surprise
       - else
         = render 'scoreboard'
 
