--- a/app/javascript/components/AppShell/Footer/styles.module.scss
+++ b/app/javascript/components/AppShell/Footer/styles.module.scss
@@ -4,4 +4,8 @@
   color: var(--grey-70);
   font-size: 0.875rem;
   text-align: center;
+
+  @media (prefers-color-scheme: dark) {
+    color: var(--grey-40);
+  }
 }
