--- a/app/javascript/components/TrackList/styles.module.scss
+++ b/app/javascript/components/TrackList/styles.module.scss
@@ -7,6 +7,11 @@
 
     background-color: var(--white);
     box-shadow: var(--block-box-shadow);
+
+    @media (prefers-color-scheme: dark) {
+      background-color: var(--grey-90);
+      border: 1px solid var(--grey-80);
+    }
   }
 }
 
@@ -49,6 +54,10 @@
 
     &[data-result] {
       text-align: right;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      color: var(--grey-40);
     }
   }
 }
