--- a/app/javascript/components/TrackListItem/styles.module.scss
+++ b/app/javascript/components/TrackListItem/styles.module.scss
@@ -4,6 +4,7 @@
   --default-box-shadow: 0 0 5px var(--box-shadow-color), inset 0 0 0 transparent;
   --pressed-box-shadow: 0 0 2px var(--box-shadow-color);
   --active-box-shadow: inset 5px 0 0 var(--blue-grey-60);
+  --color: var(--text-color);
 
   display: grid;
   grid-row-gap: 0.25rem;
@@ -14,7 +15,7 @@
   border: 0;
   border-radius: var(--border-radius-md);
 
-  color: var(--grey-90);
+  color: var(--color);
   text-align: left;
   text-decoration: none;
 
@@ -25,7 +26,7 @@
   transition: box-shadow 0.1s ease-in-out;
 
   &:hover {
-    color: var(--grey-90);
+    color: var(--color);
     text-decoration: none;
   }
 
@@ -57,6 +58,13 @@
 
   &:active:not(.active) {
     box-shadow: var(--pressed-box-shadow);
+  }
+
+  @media (prefers-color-scheme: dark) {
+    --border-color: var(--grey-80);
+    --color: var(--grey-20);
+
+    background-color: var(--grey-90);
   }
 }
 
