--- a/app/javascript/styles/globalStyles.scss
+++ b/app/javascript/styles/globalStyles.scss
@@ -20,6 +20,7 @@
   --green-70: rgb(var(--green-70-rgb));
   --green-90-rgb: 45, 134, 45;
   --green-90: rgb(var(--green-90-rgb));
+  --black: #202124;
   --grey-90: #333;
   --grey-80: #565656;
   --grey-70: #737373;
@@ -31,6 +32,7 @@
   --white: #fff;
   --border-color: var(--grey-40);
   --default-border: solid 1px var(--grey-40);
+  --background-color: var(--grey-10);
   --text-color: var(--grey-90);
   --border-radius-lg: 1rem;
   --border-radius-md: 0.5rem;
@@ -38,6 +40,13 @@
   --box-shadow-color: rgba(0, 0, 0, 0.2);
   --block-box-shadow: 0 0 3px var(--box-shadow-color);
   --outline-opacity: 0;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --text-color: var(--grey-10);
+    --background-color: var(--black);
+  }
 }
 
 * {
@@ -49,7 +58,7 @@ body {
   margin: 0;
   padding: 0;
 
-  color: var(--grey-90);
+  color: var(--text-color);
   font-family:
     'Proxima Nova',
     -apple-system,
@@ -63,7 +72,7 @@ body {
     'Segoe UI Emoji',
     'Segoe UI Symbol';
 
-  background-color: var(--grey-10);
+  background-color: var(--background-color);
 }
 
 .modalShown {
@@ -83,6 +92,10 @@ hr {
   margin: 1.25rem 0;
   border: 0;
   border-top: solid 1px var(--grey-30);
+
+  @media (prefers-color-scheme: dark) {
+    border-color: var(--grey-80);
+  }
 }
 
 form {
@@ -92,6 +105,10 @@ form {
 label {
   color: var(--grey-80);
   font-weight: 500;
+
+  @media (prefers-color-scheme: dark) {
+    color: var(--grey-40);
+  }
 }
 
 table {
