--- a/app/views/profiles/_profile.html.haml
+++ b/app/views/profiles/_profile.html.haml
@@ -1,5 +1,5 @@
 %tr
-  %td= image_tag profile.userpic.url(:thumb), class: 'img-rounded img-50 loading-bg'
+  %td= image_tag profile.userpic_url(:thumb), class: 'img-rounded img-50 loading-bg'
   %td= profile.id
   %td= profile.name
   %td= profile.country_code
