--- a/app/views/tracks/_header.html+mobile.haml
+++ b/app/views/tracks/_header.html+mobile.haml
@@ -1,7 +1,7 @@
 .track-header
   .track-header__photo
     - if track.pilot
-      = image_tag track.pilot.userpic.url(:thumb)
+      = image_tag track.pilot.userpic_url(:thumb)
 
   .track-header__data
     .track-header__row
