--- a/app/views/profiles/_header.html.haml
+++ b/app/views/profiles/_header.html.haml
@@ -1,6 +1,6 @@
 .profile-header
   .profile-header__avatar
-    = image_tag(profile.userpic.url(:medium), class: 'profile-header__avatar-image')
+    = image_tag(profile.userpic_url(:medium), class: 'profile-header__avatar-image')
     - if policy(profile).edit?
       = link_to new_profile_avatar_path(profile), remote: true, class: 'profile-header__avatar-change', rel: 'nofollow' do
         %i.fa.fa-pencil-alt
