Show contributions on main page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,7 @@
 @import './tournaments/**/*';
 @import './online_competitions/**/*';
 @import './inside_iframe';
+@import './contributions';
 
 html, body {
   height: 100%;
