--- a/app/assets/stylesheets/mobile/application.scss
+++ b/app/assets/stylesheets/mobile/application.scss
@@ -22,6 +22,8 @@
 @import '../places/**/*';
 @import '../scoreboards';
 @import '../announcements';
+@import '../desktop/navbar/menu/cta';
+@import '../contributions';
 
 @import 'variables';
 @import '**/*';
