--- a/app/views/performance_competition_series/_performance_competition_series.html.erb
+++ b/app/views/performance_competition_series/_performance_competition_series.html.erb
@@ -1,40 +1,40 @@
-<li class="comp-list-item <%= 'active' if competition_series.active? %>">
+<li class="comp-list-item <%= 'active' if performance_competition_series.active? %>">
   <div class="comp-list-params">
     <div class="comp-rules">
       Rules: GPS Performance
     </div>
     <div class="event-start-date text-muted text-center">
       <span>
-        <%= competition_series.starts_at&.strftime '%d' %>
+        <%= performance_competition_series.starts_at&.strftime '%d' %>
       </span>
       <em>
-        <%= competition_series.starts_at&.strftime '%b\'%y'  %>
+        <%= performance_competition_series.starts_at&.strftime '%b\'%y'  %>
       </em>
     </div>
   </div>
 
   <div class="event-list-details">
     <h3 class="comp-list-title">
-      <%= link_to competition_series_path(competition_series) do %>
+      <%= link_to performance_competition_series_path(performance_competition_series) do %>
         <span class="comp-name">
-          <%= competition_series.name %>
+          <%= performance_competition_series.name %>
         </span>
       <% end %>
 
-      <% if competition_series.unlisted_event? %>
+      <% if performance_competition_series.unlisted_event? %>
         <i class="fa fa-eye-slash" data-toggle="tooltip" title="<%= t('visibility.unlisted') %>"></i>
-      <% elsif competition_series.private_event? %>
+      <% elsif performance_competition_series.private_event? %>
         <i class="fa fa-lock" data-toggle="tooltip" title="<%= t('visibility.private') %>"></i>
       <% end %>
 
       <small>Official</small>
     </h3>
 
-    <% if competition_series.competitions.any? %>
+    <% if performance_competition_series.competitions.any? %>
       <div class="comp-classes text-muted">
         Competitions:
         <ul>
-          <% competition_series.competitions.each do |competition| %>
+          <% performance_competition_series.competitions.each do |competition| %>
             <li><%= competition.name %></li>
           <% end %>
         </ul>
